--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.inline-icon {
+    display: inline;
+    height: 1.1em;
+    vertical-align: text-bottom;
+}
