--- a/react-app/src/MessageBar.css
+++ b/react-app/src/MessageBar.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     animation-name: fade-in;
     animation-duration: 0.3s;
+    z-index: 9999;
 }
 
 @keyframes fade-in {
