--- a/react-app/src/Sidebar.css
+++ b/react-app/src/Sidebar.css
@@ -1,3 +1,17 @@
 .Sidebar {
     border-right: 1px solid;
 }
+
+.visible .sidebar-contents {
+    width: 300px;
+}
+
+.invisible .sidebar-contents {
+    width: 0;
+}
+
+#sidebarIframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
