react-app: implement plugin system

--- a/react-app/src/Sidebar.css
+++ b/react-app/src/Sidebar.css
@@ -4,10 +4,12 @@
 
 .visible .sidebar-contents {
     width: 300px;
+    height: 100%;
 }
 
 .invisible .sidebar-contents {
     width: 0;
+    height: 0;
 }
 
 #sidebarIframe {
